--- a/trunk/ui/MainWindow.ui
+++ b/trunk/ui/MainWindow.ui
@@ -144,7 +144,7 @@
             <bool>false</bool>
            </property>
            <property name="sortingEnabled" >
-            <bool>true</bool>
+            <bool>false</bool>
            </property>
            <column>
             <property name="text" >
