--- a/trunk/ui/MainWindow.ui
+++ b/trunk/ui/MainWindow.ui
@@ -138,7 +138,7 @@
             <number>0</number>
            </property>
            <property name="rootIsDecorated" >
-            <bool>true</bool>
+            <bool>false</bool>
            </property>
            <property name="itemsExpandable" >
             <bool>false</bool>
