--- a/trunk/ui/MainWindow.ui
+++ b/trunk/ui/MainWindow.ui
@@ -299,7 +299,13 @@ p, li { white-space: pre-wrap; }
             </attribute>
             <layout class="QGridLayout" >
              <item row="0" column="0" >
-              <widget class="QTreeWidget" name="filesWidget" />
+              <widget class="QTreeWidget" name="filesWidget" >
+               <column>
+                <property name="text" >
+                 <string>1</string>
+                </property>
+               </column>
+              </widget>
              </item>
             </layout>
            </widget>
@@ -569,22 +575,5 @@ p, li { white-space: pre-wrap; }
  <resources>
   <include location="qtpacman.qrc" />
  </resources>
- <connections>
-  <connection>
-   <sender>actionQuit</sender>
-   <signal>triggered()</signal>
-   <receiver>MainWindow</receiver>
-   <slot>close()</slot>
-   <hints>
-    <hint type="sourcelabel" >
-     <x>-1</x>
-     <y>-1</y>
-    </hint>
-    <hint type="destinationlabel" >
-     <x>396</x>
-     <y>241</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
