Optimizations for ConfigDialog

--- a/trunk/ui/configDialog.ui
+++ b/trunk/ui/configDialog.ui
@@ -21,11 +21,20 @@
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
+     <property name="maximumSize" >
+      <size>
+       <width>120</width>
+       <height>16777215</height>
+      </size>
+     </property>
      <property name="horizontalScrollBarPolicy" >
       <enum>Qt::ScrollBarAlwaysOff</enum>
      </property>
      <property name="dragDropMode" >
       <enum>QAbstractItemView::NoDragDrop</enum>
+     </property>
+     <property name="selectionBehavior" >
+      <enum>QAbstractItemView::SelectRows</enum>
      </property>
      <property name="movement" >
       <enum>QListView::Static</enum>
