--- a/trunk/ui/configDialog.ui
+++ b/trunk/ui/configDialog.ui
@@ -12,6 +12,9 @@
   <property name="windowTitle" >
    <string>qtPacman - Configuration</string>
   </property>
+  <property name="windowIcon" >
+   <iconset resource="qtpacman.qrc" >:/Icons/icons/preferences-system.png</iconset>
+  </property>
   <layout class="QGridLayout" >
    <item row="0" column="0" >
     <widget class="QListWidget" name="listWidget" >
@@ -45,14 +48,6 @@
      <property name="viewMode" >
       <enum>QListView::IconMode</enum>
      </property>
-     <item>
-      <property name="text" >
-       <string>Neues Element</string>
-      </property>
-      <property name="icon" >
-       <iconset resource="qtpacman.qrc" >:/Icons/icons/dialog-cancel.png</iconset>
-      </property>
-     </item>
     </widget>
    </item>
    <item row="2" column="0" colspan="2" >
