--- a/trunk/ui/mantDialog.ui
+++ b/trunk/ui/mantDialog.ui
@@ -18,21 +18,21 @@
      <item>
       <layout class="QHBoxLayout" >
        <item>
-        <widget class="QPushButton" name="pushButton" >
+        <widget class="QPushButton" name="cleanDbButton" >
          <property name="text" >
           <string>Clean Unused Databases</string>
          </property>
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="pushButton_2" >
+        <widget class="QPushButton" name="cleanCacheButton" >
          <property name="text" >
           <string>Clean Cache</string>
          </property>
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="pushButton_3" >
+        <widget class="QPushButton" name="emptyCacheButton" >
          <property name="text" >
           <string>Empty Cache</string>
          </property>
@@ -41,7 +41,7 @@
       </layout>
      </item>
      <item>
-      <widget class="QLabel" name="label" >
+      <widget class="QLabel" name="statusLabel" >
        <property name="text" >
         <string>Waiting.</string>
        </property>
