--- a/trunk/ui/dbUpdateDialog.ui
+++ b/trunk/ui/dbUpdateDialog.ui
@@ -6,7 +6,7 @@
     <x>0</x>
     <y>0</y>
     <width>271</width>
-    <height>138</height>
+    <height>56</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -63,18 +63,18 @@
         <colorrole role="Dark" >
          <brush brushstyle="SolidPattern" >
           <color alpha="255" >
-           <red>255</red>
-           <green>255</green>
-           <blue>255</blue>
+           <red>127</red>
+           <green>127</green>
+           <blue>127</blue>
           </color>
          </brush>
         </colorrole>
         <colorrole role="Mid" >
          <brush brushstyle="SolidPattern" >
           <color alpha="255" >
-           <red>255</red>
-           <green>255</green>
-           <blue>255</blue>
+           <red>170</red>
+           <green>170</green>
+           <blue>170</blue>
           </color>
          </brush>
         </colorrole>
@@ -129,15 +129,6 @@
            <red>0</red>
            <green>0</green>
            <blue>0</blue>
-          </color>
-         </brush>
-        </colorrole>
-        <colorrole role="HighlightedText" >
-         <brush brushstyle="SolidPattern" >
-          <color alpha="255" >
-           <red>255</red>
-           <green>255</green>
-           <blue>255</blue>
           </color>
          </brush>
         </colorrole>
@@ -191,18 +182,18 @@
         <colorrole role="Dark" >
          <brush brushstyle="SolidPattern" >
           <color alpha="255" >
-           <red>255</red>
-           <green>255</green>
-           <blue>255</blue>
+           <red>127</red>
+           <green>127</green>
+           <blue>127</blue>
           </color>
          </brush>
         </colorrole>
         <colorrole role="Mid" >
          <brush brushstyle="SolidPattern" >
           <color alpha="255" >
-           <red>255</red>
-           <green>255</green>
-           <blue>255</blue>
+           <red>170</red>
+           <green>170</green>
+           <blue>170</blue>
           </color>
          </brush>
         </colorrole>
@@ -257,15 +248,6 @@
            <red>0</red>
            <green>0</green>
            <blue>0</blue>
-          </color>
-         </brush>
-        </colorrole>
-        <colorrole role="HighlightedText" >
-         <brush brushstyle="SolidPattern" >
-          <color alpha="255" >
-           <red>255</red>
-           <green>255</green>
-           <blue>255</blue>
           </color>
          </brush>
         </colorrole>
@@ -319,18 +301,18 @@
         <colorrole role="Dark" >
          <brush brushstyle="SolidPattern" >
           <color alpha="255" >
-           <red>255</red>
-           <green>255</green>
-           <blue>255</blue>
+           <red>127</red>
+           <green>127</green>
+           <blue>127</blue>
           </color>
          </brush>
         </colorrole>
         <colorrole role="Mid" >
          <brush brushstyle="SolidPattern" >
           <color alpha="255" >
-           <red>255</red>
-           <green>255</green>
-           <blue>255</blue>
+           <red>170</red>
+           <green>170</green>
+           <blue>170</blue>
           </color>
          </brush>
         </colorrole>
@@ -388,15 +370,6 @@
           </color>
          </brush>
         </colorrole>
-        <colorrole role="HighlightedText" >
-         <brush brushstyle="SolidPattern" >
-          <color alpha="255" >
-           <red>255</red>
-           <green>255</green>
-           <blue>255</blue>
-          </color>
-         </brush>
-        </colorrole>
         <colorrole role="AlternateBase" >
          <brush brushstyle="SolidPattern" >
           <color alpha="255" >
@@ -416,7 +389,7 @@
       <enum>QFrame::StyledPanel</enum>
      </property>
      <property name="frameShadow" >
-      <enum>QFrame::Plain</enum>
+      <enum>QFrame::Sunken</enum>
      </property>
      <layout class="QGridLayout" >
       <item row="0" column="0" >
