--- a/trunk/ui/configDialog.ui
+++ b/trunk/ui/configDialog.ui
@@ -230,138 +230,7 @@ Please note that packages from Unstable and Testing may break your system.</stri
               </widget>
              </item>
              <item>
-              <widget class="QComboBox" name="mirrorBox" >
-               <item>
-                <property name="text" >
-                 <string>ftp://ftp.archlinux.org/$repo/os/i686</string>
-                </property>
-               </item>
-               <item>
-                <property name="text" >
-                 <string>ftp://ftp.nethat.com/pub/linux/archlinux/$repo/os/i686</string>
-                </property>
-               </item>
-               <item>
-                <property name="text" >
-                 <string>ftp://locke.suu.edu/linux/dist/archlinux/$repo/os/i686</string>
-                </property>
-               </item>
-               <item>
-                <property name="text" >
-                 <string>ftp://mirrors.unixheads.org/archlinux/$repo/os/i686</string>
-                </property>
-               </item>
-               <item>
-                <property name="text" >
-                 <string>ftp://ftp-linux.cc.gatech.edu/pub/linux/distributions/archlinux/$repo/os/i686</string>
-                </property>
-               </item>
-               <item>
-                <property name="text" >
-                 <string>ftp://mirror.cs.vt.edu/pub/ArchLinux/$repo/os/i686</string>
-                </property>
-               </item>
-               <item>
-                <property name="text" >
-                 <string>http://mirrors.easynews.com/linux/archlinux/$repo/os/i686</string>
-                </property>
-               </item>
-               <item>
-                <property name="text" >
-                 <string>ftp://ftp.ibiblio.org/pub/linux/distributions/archlinux/$repo/os/i686</string>
-                </property>
-               </item>
-               <item>
-                <property name="text" >
-                 <string>http://holmes.umflint.edu/archlinux/$repo/os/i686</string>
-                </property>
-               </item>
-               <item>
-                <property name="text" >
-                 <string>http://archlinux.c3sl.ufpr.br/$repo/os/i686</string>
-                </property>
-               </item>
-               <item>
-                <property name="text" >
-                 <string>ftp://archlinux.c3sl.ufpr.br/archlinux/$repo/os/i686</string>
-                </property>
-               </item>
-               <item>
-                <property name="text" >
-                 <string>ftp://gd.tuwien.ac.at/opsys/linux/archlinux/$repo/os/i686</string>
-                </property>
-               </item>
-               <item>
-                <property name="text" >
-                 <string>ftp://ftp.belnet.be/mirror/archlinux.org/$repo/os/i686</string>
-                </property>
-               </item>
-               <item>
-                <property name="text" >
-                 <string>ftp://ftp.sh.cvut.cz/MIRRORS/arch/$repo/os/i686</string>
-                </property>
-               </item>
-               <item>
-                <property name="text" >
-                 <string>ftp://ftp.estpak.ee/pub/archlinux/$repo/os/i686</string>
-                </property>
-               </item>
-               <item>
-                <property name="text" >
-                 <string>ftp://ftp.sixnix.net/pub/archlinux/$repo/os/i686</string>
-                </property>
-               </item>
-               <item>
-                <property name="text" >
-                 <string>ftp://mir1.archlinuxfr.org/archlinux/$repo/os/i686</string>
-                </property>
-               </item>
-               <item>
-                <property name="text" >
-                 <string>ftp://mir2.archlinuxfr.org/archlinux/$repo/os/i686</string>
-                </property>
-               </item>
-               <item>
-                <property name="text" >
-                 <string>ftp://distrib-coffee.ipsl.jussieu.fr/pub/linux/archlinux/$repo/os/i686</string>
-                </property>
-               </item>
-               <item>
-                <property name="text" >
-                 <string>http://mir.archlinux.fr/$repo/os/i686</string>
-                </property>
-               </item>
-               <item>
-                <property name="text" >
-                 <string>ftp://ftp.free.fr/mirrors/ftp.archlinux.org/$repo/os/i686</string>
-                </property>
-               </item>
-               <item>
-                <property name="text" >
-                 <string>ftp://ftp.tu-chemnitz.de/pub/linux/sunsite.unc-mirror/distributions/archlinux/$repo/os/i686</string>
-                </property>
-               </item>
-               <item>
-                <property name="text" >
-                 <string>ftp://ftp.hosteurope.de/mirror/ftp.archlinux.org/$repo/os/i686</string>
-                </property>
-               </item>
-               <item>
-                <property name="text" >
-                 <string>ftp://ftp.archlinuxppc.org/i686/$repo/os/@carch@</string>
-                </property>
-               </item>
-               <item>
-                <property name="text" >
-                 <string>http://mi.mirror.garr.it/mirrors/archlinux/$repo/os/i686</string>
-                </property>
-               </item>
-               <item>
-                <property name="text" >
-                 <string>http://ftp.heanet.ie/mirrors/ftp.archlinux.org/$repo/os/i686</string>
-                </property>
-               </item>
-              </widget>
+              <widget class="QComboBox" name="mirrorBox" />
              </item>
             </layout>
            </item>
